# AccessibleDjango

./: .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  justfile  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
accessible_django/: apps.py
accessible_django/utils/: get_template_dirs.py
docs/: changelog.md  conf.py  contributing.md  index.md  installation.md  quickstart.md  user_guide.md
src/accessible_django/checks/: img.py
src/accessible_django/utils/: get_template_dirs.py
src/accessible_django/validators/: base.py  img_tag.py
tests/: settings.py  test_img.py
