[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "accessible-django"
version = "1.0.0"
description = "A Django package for accessibility checks during development"
readme = "README.md"
license = { text = "MIT" }

authors = [
    { name = "Johanan Oppong Amoateng", email = "johananoppongamoateng2001@gmail.com" }
]

requires-python = ">=3.10"

dependencies = [
    "Django>=4.2",
]

keywords = ["django", "accessibility", "wcag", "a11y", "validation"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]


[project.urls]
Homepage = "https://github.com/JohananOppongAmoateng/AccessibleDjango"
Documentation = "https://accessibledjango.readthedocs.io/"
Repository = "https://github.com/JohananOppongAmoateng/AccessibleDjango"
Issues = "https://github.com/JohananOppongAmoateng/AccessibleDjango/issues"
Changelog = "https://github.com/JohananOppongAmoateng/AccessibleDjango/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# For pip compatibility (Read the Docs, etc.)
dev = [
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "coverage[toml]>=7.0",
]

docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "beautifulsoup4>=4.12.0",
]

test = [
    "pytest>=8.0",
    "pytest-django>=4.8",
]


# ------------------------------------------------------------
# Dependency groups (uv / PEP 735 style)
# For uv users - same as optional-dependencies above
# ------------------------------------------------------------

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "coverage[toml]>=7.0",
]

docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "beautifulsoup4>=4.12.0",
]

test = [
    "pytest>=8.0",
    "pytest-django>=4.8",
]


# ------------------------------------------------------------
# Build configuration
# ------------------------------------------------------------

[tool.hatchling.build.targets.wheel]
packages = ["src/accessible_django"]


# ------------------------------------------------------------
# Ruff
# ------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "W",   # warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["accessible_django"]


# ------------------------------------------------------------
# MyPy
# ------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false


# ------------------------------------------------------------
# Coverage
# ------------------------------------------------------------

[tool.coverage.run]
source = ["src/accessible_django"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
